@@ -1,5 +1,7 @@
 2014-07-31  Benno Schulenberg  <bensberg@justemail.net>
 	* src/files.c (do_insertfile): Adjust some indentation.
+	* src/prompt.c (do_statusbar_input), src/browser.c (do_browser):
+	Reorder a few things, and adjust some whitespace.
 
 2014-07-27  Benno Schulenberg  <bensberg@justemail.net>
 	* src/global.c (add_to_sclist): Remove the now unused and unneeded
